Add and style title and info containers

--- a/index.html
+++ b/index.html
@@ -18,5 +18,43 @@
             </ul>
         </div>
      </div>
+    <!-- Title -->
+    <div class="title-container">
+        <div class="title-container-left">
+            <div class="title">This is me.</div>
+            <div class="title-subtext">I am practicing what I have learnt. Have a nice day.</div>
+            <a href="https://buymeacoffee.com/ratdog" target="_blank" class="title-button">Buy Me a Coffee</a>
+        </div>
+        <div class="title-container-right">
+            <img class="title-img" src="images/title-image.png" alt="Photo of Tyler">
+        </div>
+    </div>
+    <!-- Info-->
+     <div class="info-container">
+        <div class="info-text">My Priorities</div>
+        <div class="info-gallery">
+            <ul>
+                <div class="info-img">
+                    <img src="images/html.webp" alt="HTML">
+                    <div class="info-subtext">Master HTML</div>
+                </div>
+                <div class="info-img">
+                    <img src="images/css.webp" alt="CSS">
+                    <div class="info-subtext">Master CSS</div>
+                </div>
+                <div class="info-img">
+                    <img src="images/js.webp" alt="JavaScript">
+                    <div class="info-subtext">Master JavaScript</div>
+                </div>
+                <div class="info-img">
+                    <img src="images/jp.webp" alt="Japanese">
+                    <div class="info-subtext">Master Japanese</div>
+                </div>
+            </ul>
+        </div>
+
+
+
+     </div>
 </body>
 </html>
