--- a/index.html
+++ b/index.html
@@ -52,9 +52,21 @@
                 </div>
             </ul>
         </div>
-
-
-
      </div>
+     <!-- Quote -->
+      <div class="quote-container">
+        <div class="quote">If you can't explain it simply, then you don't understand it well enough.</div>
+        <div class="quote-attribution">- Albert Einstein</div>
+      </div>
+     <!-- Footer-->
+     <div class="footer">
+        <div class="footer-wrapper">
+            <div class="footer-text">
+                <div class="footer-header">I need followers!</div>
+                <div class="footer-info">Click the button to check out my GitHub page.</div>
+            </div>
+            <a href="https://github.com/tylersummers" target="_blank" class="footer-button">GitHub</a>
+        </div>
+    </div>
 </body>
 </html>
